--- a/WEB_PRACTICA_FINAL/css/styles_aboutus.css
+++ b/WEB_PRACTICA_FINAL/css/styles_aboutus.css
@@ -18,123 +18,15 @@ body {
   background-color: var(--color-blanco-fondo);
 }
 
-/* CÓDIGO DEL NAV >>>>>>>>>>>>>>>>>>>>>>>>>*/
-
-nav {
-  height: 4em;
-  margin: 2em;
-  background-color: var(--color-blanco-fondo);
-  border: 2px solid var(--color-negro-texto);
-  border-radius: 50px;
-
-  display: block;
-  z-index: 999;
-}
-
-#menu {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  margin: 0 1em;
-}
-
-#logo {
-  float: left;
-  width: 30%;
-  align-content: flex-start;
-  margin-top: 0.4em;
-}
-
-#logo > img {
-  height: 5em;
-  position: absolute;
-  top: 1.5em;
-  left: 70px;
-}
-
-#menu > ul {
-  width: 70%;
-  height: 3em;
-  padding: 0;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin-bottom: 0em;
-  margin-top: 0.4em;
-}
-
-#menu > ul > li {
-  list-style: none;
-}
-
-#menu > ul > li > button {
-  height: 2em;
-  padding: 0 1em;
-  background-color: #f61067;
-  border: 2px solid #f61067;
-  border-radius: 50px;
-}
-
-#menu > ul > li > button > a {
-  color: var(--color-blanco-fondo);
-  text-decoration: none;
-}
-
-#menu > ul > li > button:hover {
-  background-color: var(--color-blanco-fondo);
-}
-
-#menu > ul > li > button:hover > a {
-  color: var(--color-rosa-hover);
-  font-weight: bold;
-}
-
-#menu > ul > li > a,
-#menu > ul > li > i {
-  color: var(--color-negro-texto);
-  text-decoration: none;
-}
-
-#menu > ul > li:last-child {
-  display: none;
-}
-
-.toggle_menu {
-  display: none;
-}
-
-.toggle_menu > ul {
-  margin: 1em 0;
-  width: 50%;
-  float: right;
-
+header {
+  min-height: 0vh;
+  height: 8em;
+  text-align: center;
   display: flex;
   flex-direction: column;
-}
-
-.toggle_menu > ul > li {
   background-color: var(--color-blanco-fondo);
-  border: 2px solid #1c1a31;
-  border-radius: 50px;
-  list-style: none;
-
-  height: 3em;
-  margin: 0.5em 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-.toggle_menu > ul > li > a {
-  text-decoration: none;
-  margin: 0 2em;
-  color: var(--color-negro-texto);
-}
-
-.toggle_menu > ul > li:hover > a,
-#menu > ul > li:hover > a {
-  font-weight: bold;
-}
 
 /* <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
 
@@ -149,7 +41,7 @@ nav {
 }
 
 .aboutustitle {
-  margin: 0vw 4vw;
+  margin: 4vw;
 }
 
 .aboutustitle p {
@@ -458,7 +350,7 @@ h1:hover {
 }
 
 .infoubication p,
-a {
+.infoubication a {
   margin-bottom: 0;
   font-size: 1.2vw;
   color: #f4f4ed;
@@ -672,7 +564,7 @@ a {
   }
 
   .infoubication p,
-  a {
+  .infoubication a {
     margin-bottom: 0;
     font-size: 1.7vw;
     color: var(--color-blanco-fondo);
@@ -859,7 +751,7 @@ a {
   }
 
   .infoubication p,
-  a {
+  .infoubication a {
     font-size: 3.2vw;
   }
 
@@ -955,29 +847,6 @@ a {
   .enviar button {
     height: 3em;
     width: 7.5em;
-  }
-}
-
-/* media queries menu movil */
-@media screen and (max-width: 700px) {
-  #menu > ul > li:last-child {
-    display: block;
-  }
-
-  #menu > ul > li:not(:last-child) {
-    display: none;
-  }
-
-  #menu > ul {
-    height: auto;
-    padding: 1em;
-    flex-direction: column;
-    align-items: flex-end;
-    margin-top: 0em;
-  }
-
-  #menu > ul > li {
-    margin: 0.2em 0;
   }
 }
 
